# central-mind

./: .env.example  .gitignore  README.md  claude_desktop_config.example.json  pyproject.toml
docs/: BUILD_SUMMARY.md  PHASE1_SUMMARY.md  PLAN.md  QUICKSTART.md  STATUS.md
docs/benchmarks/: benchmark.html  obfuscation_results.md
docs/security/: SECURITY_AUDIT_2026-02-25.md
spec/: aoscx.openapi.json  apstra.openapi.json  axis.openapi.json  clearpass-openapi.json  clearpass-openapi.resolved.json  mist.openapi.json  sdc.openapi.json  sdc.resolved.json  uxi.openapi.json
src/centralmind/: __init__.py  __main__.py  auth.py  config.py  obfuscator.py  sandbox.py  server.py  spec_indexer.py  spec_resolver.py
tests/: test_aoscx.py  test_main.py  test_obfuscation.py  test_sandbox.py  test_security.py  test_security_feb25_audit.py  test_security_feb25_evening_audit.py  test_security_feb25_evening_redux.py  test_security_feb25_late_night_audit.py  test_security_feb25_night_audit.py  test_security_feb25_pm_audit.py  test_security_feb26_3pm_cron.py  test_security_feb26_cron_audit.py  test_security_feb26_late_night_audit.py  test_security_feb26_morning_audit.py  test_security_feb26_morning_cron.py  test_security_feb26_pm_audit.py  test_security_feb26_red_team.py  test_security_feb26_red_team_cron.py  test_security_feb27_cron.py  test_security_feb28_cron.py  test_security_mar01_cron.py  test_security_mar02_cron.py  test_security_mar04_cron.py  test_security_mar05_cron.py  test_security_mar06_cron.py  test_security_mar07_cron.py  test_security_mar08_cron.py  test_security_mar09_cron.py  test_security_mar12_cron.py  test_security_mar16_cron.py  test_security_new_attacks.py  test_server.py  test_spec_indexer.py  test_spec_resolver.py
