[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "centralmind"
version = "0.1.0"
authors = [{ name = "Zak" }]
description = "Intelligent MCP Server for Aruba Central API with semantic tool design"
keywords = ["Aruba", "Central", "CNX", "MCP", "LLM", "AI"]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: System Administrators",
  "Topic :: System :: Networking",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "mcp[cli]>=1.9",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27",
]

[project.urls]
"Source" = "https://github.com/your-org/centralmind"

[project.scripts]
centralmind = "centralmind.__main__:main_sync"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.1.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/centralmind"]

[tool.hatchling.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
  "-v",
  "--tb=short",
  "--cov=src/centralmind",
  "--cov-report=html",
  "--cov-report=term-missing",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
source = ["src/centralmind"]
omit = ["*/tests/*", "*/__pycache__/*"]
